# AudioBlend

./: .gitignore  CMakeLists.txt  LICENSE  README.md  requirements.txt  setup.py
examples/: auto_mixing_demo.py
src/cpp/core/: audio_buffer.h
src/cpp/dsp/: auto_mixer.cpp  auto_mixer.h  spectrum_analyzer.cpp  spectrum_analyzer.h
src/cpp/effects/: compressor.cpp  compressor.h  equalizer.cpp  equalizer.h
src/python/: __init__.py  bindings.cpp
src/python/automixer/: pedalboard_processor.py
src/python/interface/: audio_file.py  auto_mixer.py
tests/: test_basic.py
